# kanji-mnemonic

./: .coverage  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
kanji_mnemonic/: cli.py  data.py  lookup.py  prompt.py  wk_sound_mnemonics.json
scripts/: README.md  extract_wk_sound_mnemonics.py  verify_wk_sound_mnemonics.py
tests/: conftest.py  test_cli.py  test_data.py  test_decompositions.py  test_integration.py  test_kanjidic.py  test_lookup.py  test_personal_radicals.py  test_prompt.py  test_reading_overrides.py  test_refinement.py  test_sound_mnemonics.py  test_urls.py
