[project]
name = "kanji-mnemonic"
version = "0.1.0"
description = "CLI tool for generating kanji mnemonics using WaniKani radicals and phonetic-semantic data"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.83.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
kanji = "kanji_mnemonic.cli:main"

[tool.uv]
package = true
